Actualizo public/index.html con los últimos cambios

--- a/public/index.html
+++ b/public/index.html
@@ -307,7 +307,7 @@
         <section id="contact" data-aos="fade-up" class="py-20 mx-auto container lg:max-w-4xl md:max-w-2xl">
             <h2 class="text-4xl font-bold text-left text-white mb-8">Contacto</h2>
             <div class="bg-slate-900 rounded-lg shadow-secondary-1 p-8">
-                <form id="contactForm" action="http://localhost:3000/send-email" method="POST" class="space-y-6">
+                <form action="https://repositorio-lszi.onrender.com/send-email" method="POST" class="space-y-6">
                     <div>
                         <label for="name" class="block text-sm font-medium text-white">Nombre Completo</label>
                         <input type="text" id="name" name="name" required
