Actualizar app.js y frontend con manejo de CORS y fetch para formulario

--- a/public/index.html
+++ b/public/index.html
@@ -65,21 +65,10 @@
                             <strong>Registro Nacional de las Personas (RENAPER) - Argentina</strong>
                         </h3>
                         <time class="block mb-2 text-sm font-medium leading-none text-white">
-                            Enero 2015 - 2016
+                            Enero 2015 - diciembre 2017
                         </time>
                         <p class="mb-4 text-base font-normal text-gray-300">
-                            Relevamiento técnico y operativo en oficinas públicas para identificar requerimientos
-                            específicos de hardware según funciones, entorno y sistemas utilizados.<br>
-
-                            Aplicación de criterios de selección basados en compatibilidad tecnológica, eficiencia
-                            operativa, escalabilidad y cumplimiento de normas gubernamentales.<br>
-
-                            Elaboración de documentación técnica con especificaciones detalladas adaptadas a los
-                            hallazgos del relevamiento.<br>
-
-                            Coordinación con personal técnico y administrativo para validar requerimientos antes del
-                            proceso licitatorio.<br>
-
+•	Responsable del área de compras de equipamiento informático. Cómo Analista Técnico asesoramiento de la adquisición de hardware destinado a áreas de atención al público. <br>
 
                         </p>
                     </li>
@@ -100,26 +89,10 @@
                             <strong> Ministerio del Interior | Presidencia de la Nación</strong>
                         </h3>
                         <time class="block mb-2 text-sm font-medium leading-none text-white">
-                            Enero 2015 - 2020
+                            Enero 2018 - Enero 2022
                         </time>
                         <p class="mb-4 text-base font-normal text-gray-300">
-                            Coordinación de equipos multidisciplinarios de Soporte Técnico y Control de Calidad (QA)
-                            en el marco de proyectos del sistema de gestión documental electrónica de la Administración Pública Nacional (GDE).<br>
-
-                            Relevamiento de requerimientos y documentancion funcional mediante interacción con
-                            usuarios finales y áreas técnicas del sistema GDE.<br>
-
-                            Diseño de casos de prueba funcionales y coordinación de pruebas manuales y automatizadas.<br>
-
-                            Validación funcional de nuevas funcionalidades y versiones del sistema previo a su
-                            liberación.<br>
-
-                            Análisis de incidencias, priorización de tickets y coordinación de soluciones con equipos de
-                            desarrollo.<br>
-
-                            Articulación entre distintas áreas del Ministerio en conjunto al Ministerio de
-                            Modernización y la Secretaría País Digital para garantizar la calidad y continuidad operativa
-                            del sistema.<br>
+                        •	Revelamiento de requerimientos y documentación funcional para sistema público nacional GDE.
 
                         </p>
                     </li>
@@ -139,17 +112,16 @@
                             <strong> Logística Los Novillos SA</strong>
                         </h3>
                         <time class="block mb-2 text-sm font-medium leading-none text-white">
-                            Marzo 2020 - Enero 2022
+                            Marzo 2022 - Diciembre 2024
                         </time>
                         <p class="mb-4 text-base font-normal text-gray-300">
-                            Analista Funcional en empresa líder de logística agroganadera en Argentina.
-                            Diseñé e implementé un sistema interno tipo SaaS, alojado en Cloud de Workspace
-                            administrada con App Scripts y consumido vía app móvil, para registrar, visualizar y
-                            reportar operaciones logísticas en tiempo real.
-                            Construcción de un sistema distribuido con microservicios para logística: gestión de rutas
-                            y trazabilidad en tiempo real. Exposición de servicios a través de API RESTful.
-                            Reingeniería de procesos basada en relevamientos con usuarios, observación directa y
-                            análisis de métricas operativas. (AS IS / TO BE)
+•	Diseño e implementación de soluciones SaaS (Google Workspace + Apps Script) para registrar, visualizar y reportar operaciones logísticas en tiempo real, integradas con apps móviles desarrolladas en entorno PaaS.<br>
+•	Diseño de sistema distribuido con microservicios para la gestión de rutas logísticas y trazabilidad en tiempo real.<br>
+•	Integración con APIs públicas para obtener precios de combustibles y calcular dinámicamente la ruta más económica según contexto. <br>
+•	Servicios RESTful expuestos para consumo interno y externo. <br>
+•	Reingeniería de procesos basada en relevamientos con usuarios, observación directa y análisis de métricas operativas. (AS IS / TO BE)
+
+
 
                         </p>
 
@@ -177,13 +149,15 @@
                             Febrero 2022 - Actualidad
                         </time>
                         <p class="mb-4 text-base font-normal text-gray-300">
-                            Analista Funcional en Sistemas y programador con 5 años de experiencia en soluciones
-                            informáticas. Me capacité y especialicé en Argentina. Tengo doble ciudadanía y resido en
-                            Barcelona desde enero del 2025.
-                            Mis especialidades como diseñador de soluciones están acompañadas por mis estudios en
-                            programación Full Stack, Cisco Networking Academy y Tester QA.
-                            Experto en retroingenieria de procesos basada en relevamientos, análisis y diseño de
-                            sistemas.
+•	Implementación de servicios webs para sitios personalizados. <br>
+•	Normalización de bases de datos. <br>
+•	Asistencia técnica y presupuestaria. <br>
+•	Testing de Pruebas funcionales y automáticas. <br> 
+•	Integración de APIs (mapas, redes sociales, sistemas y pasarelas de pagos). <br>
+•	Implementación de sitios responsivos con enfoque en experiencia de usuario (UX). <br>
+•	Desarrollo de documentación funcional y técnica para soporte y mantenimiento. <br>
+•	Relevamiento de requerimientos con clientes y traducción de necesidades de negocio en especificaciones funcionales. <br>
+
 
                         </p>
                     </li>
@@ -307,7 +281,8 @@
         <section id="contact" data-aos="fade-up" class="py-20 mx-auto container lg:max-w-4xl md:max-w-2xl">
             <h2 class="text-4xl font-bold text-left text-white mb-8">Contacto</h2>
             <div class="bg-slate-900 rounded-lg shadow-secondary-1 p-8">
-                <form action="https://repositorio-lszi.onrender.com/send-email" method="POST" class="space-y-6">
+                <form id="contactForm" action="https://repositorio-lszi.onrender.com/send-email" method="POST" class="space-y-6">
+
                     <div>
                         <label for="name" class="block text-sm font-medium text-white">Nombre Completo</label>
                         <input type="text" id="name" name="name" required
@@ -379,7 +354,7 @@
                     const data = Object.fromEntries(formData.entries());
 
                     try {
-                        const response = await fetch('/send-email', {
+                        const response = await fetch('https://repositorio-lszi.onrender.com/send-email', {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json'
@@ -397,7 +372,9 @@
                             contactForm.reset(); // Limpia los campos del formulario
 
                             // Desplazarse suavemente a la sección de contacto (donde está el mensaje)
-                            document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });
+                                setTimeout(() => {
+        window.location.href = '/';
+    }, 2000);
 
                         } else {
                             formMessage.textContent = result.message || 'Error al enviar el mensaje.';
