--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Desarrollador Web Full Stack.">
-    <title>Portfolio - Igalmes</title>
+    <title>Igalmes - Aanalista Funcional</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -354,7 +354,7 @@
                     const data = Object.fromEntries(formData.entries());
 
                     try {
-                        const response = await fetch('https://repositorio-lszi.onrender.com/send-email', {
+                        const response = await fetch('https://repositorio-lszi.onrender.com', {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json'
