--- a/public/index.html
+++ b/public/index.html
@@ -354,7 +354,7 @@
                     const data = Object.fromEntries(formData.entries());
 
                     try {
-                        const response = await fetch('https://repositorio-lszi.onrender.com', {
+                        const response = await fetch('https://repositorio-lszi.onrender.com/send-email', {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json'
