--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Desarrollador Web Full Stack.">
-    <title>Igalmes - Aanalista Funcional</title>
+    <title>Igalmes - Analista Funcional</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -31,8 +31,8 @@
                         ¡Hola! soy Ignacio Galmes. <br>
                         Actualmente vivo en Barcelona, España aunque me formé profesionalmente y desarrollé mi experiencia laboral en Argentina. Mi interés por la computación comenzó en mis años de secundaria, explorando los sistemas
                         operativos de consolas, por curiosidad con amigos.
-                        Hoy en día, <strong>soy Analista Funcional y Programador. Cuento con +5 años de
-                            experiencia en desarrollo Full Stack.</strong>
+                        Hoy en día, <strong>soy Analista Funcional y Desarrollador Full Stack. Cuento con +5 años de
+                            experiencia en relevamiento de requisitos, diseño y analisis de soluciones informáticas.</strong>
                     </p>
                     <p>
                         Además, disfruto compartir mi conocimiento con la comunidad tecnológica.
