--- a/public/index.html
+++ b/public/index.html
@@ -173,8 +173,8 @@
                 <div class="block rounded-lg shadow-secondary-1 bg-slate-900 ">
                     <div class="relative overflow-hidden bg-cover bg-no-repeat">
                         <img class="rounded-t-lg object-cover object-center w-full h-56 " src="./images/Captura de pantalla 2025-05-17 111018.png"
-                            alt="Proyecto CAC Movies" />
-                        <a href="https://broko-de.github.io/cac-movies-integration/" target="_blank" role="link">
+                            alt="Proyecto Mis Movies" />
+                        <a href="https://igalmes.github.io/Mis-Movies/" target="_blank" role="link">
                             <div
                                 class="absolute bottom-0 left-0 right-0 top-0 h-full w-full overflow-hidden bg-[hsla(0,0%,98%,0.15)] bg-fixed opacity-0 transition duration-300 ease-in-out hover:opacity-100">
                             </div>
@@ -189,7 +189,7 @@
                         <a href="https://github.com/broko-de/cac-movies-integration" target="_blank" role="link"
                             rel="noopener noreferrer" role="link"
                             class="inline-flex items-center justify-center gap-2 px-4 py-1 transition border border-gray-600 rounded-full bg-gray-800 text-white focus-visible:ring-yellow-500/80 text-md hover:bg-gray-100 hover:border-gray-300 hover:text-black group max-w-fit focus:outline-none focus-visible:outline-none focus-visible:ring focus-visible:ring-white focus-visible:ring-offset-2 active:bg-black">
-                            <svg class="size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                            <svg class="size-4" xmlns="http://www   .w3.org/2000/svg" width="24" height="24"
                                 viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
